fix(frontend): long description owerflowing container on POI detail page ss-437

--- a/apps/frontend/src/pages/points-of-interest-details/styles.module.css
+++ b/apps/frontend/src/pages/points-of-interest-details/styles.module.css
@@ -19,6 +19,7 @@
 .description {
 	font-size: var(--font-size-small);
 	line-height: 1.5;
+	overflow-wrap: break-word;
 }
 
 @media (width <= 1440px) {
