--- a/apps/frontend/src/pages/route-description/libs/components/route-reviews/styles.module.css
+++ b/apps/frontend/src/pages/route-description/libs/components/route-reviews/styles.module.css
@@ -1,26 +1,25 @@
 .section {
-	margin-top: 32px;
+	margin-top: 20px;
 }
 
-.bar {
+.header {
 	display: flex;
-	gap: 12px;
+	gap: 32px;
 	align-items: center;
-	justify-content: space-between;
-	margin-bottom: 12px;
+	justify-content: flex-start;
+	margin-bottom: 32px;
 }
 
 .title {
 	margin: 0;
-	font-size: var(--font-size-h3);
-	font-weight: var(--font-weight-semibold);
+	font-size: var(--font-size-h2);
+	line-height: 1.3;
 }
 
 .list {
 	display: grid;
-	gap: 12px;
+	gap: 32px;
 	padding: 0;
-	margin: 0;
 	list-style: none;
 }
 
