--- a/apps/frontend/src/libs/components/button/styles.module.css
+++ b/apps/frontend/src/libs/components/button/styles.module.css
@@ -1,78 +1,76 @@
-.green {
-	color: var(--color-text-inverse-strong);
-	background-color: var(--color-fill-brand-strong);
-}
-
-.green:hover,
-.green:focus-visible,
-.green:focus-visible::after,
-.green:disabled {
-	background-color: var(--color-fill-press);
-}
-
-.outline-green,
-.outline-red {
-	background-color: var(--color-background-base);
-}
-
-.outline-green {
-	color: var(--color-brand-800);
-	border-color: var(--color-brand-800);
-}
-
-.outline-red {
-	color: var(--color-text-error);
-	border-color: var(--color-text-error);
-}
-
-.outlined {
-	padding: 8px 16px;
-	font-weight: var(--font-weight-semibold);
-	border: 2px solid;
-	border-radius: 30px;
-}
-
-.filled {
-	padding: 12px 16px;
-	border: none;
-	border-radius: 8px;
-}
-
-.filled:focus-visible::after {
-	position: absolute;
-	inset: -4px;
-	content: "";
-	background: transparent;
-	border: 2px solid;
-	border-radius: 12px;
-}
-
 .button {
 	position: relative;
 	width: 100%;
 	min-width: fit-content;
-	font-family: Inter, sans-serif;
+	padding: 12px 16px;
+	font-family: var(--font-family);
 	font-size: var(--font-size-small);
 	line-height: 1.5;
+	color: inherit;
 	text-align: center;
 	text-decoration: none;
-	box-shadow:
-		0 4px 8px -2px var(--color-shadow-weak),
-		0 2px 4px -2px var(--color-shadow-strong);
-	transition: background-color 0.3s ease;
-}
-
-.button:hover {
 	cursor: pointer;
+	border-radius: 8px;
+	transition: all 0.3s ease;
 }
 
 .button:focus-visible {
 	outline: none;
 }
 
+.button:focus-visible::after {
+	position: absolute;
+	inset: -4px;
+	content: "";
+	background: transparent;
+	border: 2px solid var(--color-fill-press);
+	border-radius: 12px;
+}
+
 .button:disabled {
-	box-shadow: none;
+	cursor: not-allowed;
 	opacity: 0.3;
+}
+
+.button-primary {
+	color: var(--color-text-inverse-strong);
+	background-color: var(--color-fill-brand-strong);
+	border: none;
+	box-shadow:
+		0 4px 8px -2px var(--color-shadow-weak),
+		0 2px 4px -2px var(--color-shadow-strong);
+}
+
+.button-primary:disabled {
+	background-color: var(--color-fill-press);
+	box-shadow: none;
+}
+
+.button-primary:hover:not(:disabled),
+.button-primary:focus-visible:not(:disabled) {
+	background-color: var(--color-fill-press);
+}
+
+.button-outlined {
+	color: var(--color-fill-brand-strong);
+	background-color: transparent;
+	border: 2px solid var(--color-fill-brand-strong);
+}
+
+.button-outlined:disabled {
+	color: var(--color-fill-press);
+	border-color: var(--color-fill-press);
+}
+
+.button-outlined:hover:not(:disabled),
+.button-outlined:focus-visible:not(:disabled) {
+	color: var(--color-text-inverse-strong);
+	background-color: var(--color-fill-brand-strong);
+}
+
+.outlined-danger {
+	color: var(--color-text-error);
+	border-color: var(--color-text-error);
 }
 
 @media (width <= 768px) {
