feat(backend/frontend): avatar upload ss-388 (#431)
* feat(backend/frontend): avatar upload ss-388

* refactor(backend): renaming test avatar-url ss-388

* refactor(backend): fixing imports, removing upload dashboards ss-388

* refactor(backend): entity-id zod validation ss-388

* refactor(backend): alter_files_table migration ss-388

* refactor(backend): avatar-url type ss-388

* docs(backend): mermaid diagram ss-388

* fix(backend): fixed tests mock ss-338

* feat(frontend): upload button component ss-338

* refactor(shared): entity-id type in file-upload-request-dto ss-388

* refactor(backend): auth upload avatar route refactor ss-388

* refactor(backend): del files table rows ss-388

* refactor(backend): remove avatar entity init ss-388

* refactor(frontend): remove upload-button component ss-388

* docs(backend): mermaid er-diagram ss-388

* refactor(backend): refactor user-details-with-password ss-388

* refactor(frontend): button var rename ss-388

* refactor(frontend): button component naming ss-388

* refactor(frontend): remove file-api get-all ss-388

* refactor(frontend): remove file api module ss-388

* refactor(frontend): button component types ss-388

* refactor(frontend): upload-avatar fullfield action validation ss-338

--- a/apps/frontend/src/libs/components/button/styles.module.css
+++ b/apps/frontend/src/libs/components/button/styles.module.css
@@ -3,29 +3,19 @@
 	width: 100%;
 	min-width: fit-content;
 	padding: 12px 16px;
-	font-family: Inter, sans-serif;
+	font-family: var(--font-family);
 	font-size: var(--font-size-small);
 	line-height: 1.5;
-	color: var(--color-text-inverse-strong);
+	color: inherit;
 	text-align: center;
 	text-decoration: none;
-	background-color: var(--color-fill-brand-strong);
-	border: none;
-	border-radius: 8px;
-	box-shadow:
-		0 4px 8px -2px var(--color-shadow-weak),
-		0 2px 4px -2px var(--color-shadow-strong);
-	transition: background-color 0.3s ease;
-}
-
-.button:hover {
 	cursor: pointer;
-	background-color: var(--color-fill-press);
+	border-radius: 8px;
+	transition: all 0.3s ease;
 }
 
 .button:focus-visible {
 	outline: none;
-	background-color: var(--color-fill-press);
 }
 
 .button:focus-visible::after {
@@ -38,9 +28,49 @@
 }
 
 .button:disabled {
+	cursor: not-allowed;
+	opacity: 0.3;
+}
+
+.button-primary {
+	color: var(--color-text-inverse-strong);
+	background-color: var(--color-fill-brand-strong);
+	border: none;
+	box-shadow:
+		0 4px 8px -2px var(--color-shadow-weak),
+		0 2px 4px -2px var(--color-shadow-strong);
+}
+
+.button-primary:disabled {
 	background-color: var(--color-fill-press);
 	box-shadow: none;
-	opacity: 0.3;
+}
+
+.button-primary:hover:not(:disabled),
+.button-primary:focus-visible:not(:disabled) {
+	background-color: var(--color-fill-press);
+}
+
+.button-outlined {
+	color: var(--color-fill-brand-strong);
+	background-color: transparent;
+	border: 2px solid var(--color-fill-brand-strong);
+}
+
+.button-outlined:disabled {
+	color: var(--color-fill-press);
+	border-color: var(--color-fill-press);
+}
+
+.button-outlined:hover:not(:disabled),
+.button-outlined:focus-visible:not(:disabled) {
+	color: var(--color-text-inverse-strong);
+	background-color: var(--color-fill-brand-strong);
+}
+
+.outlined-danger {
+	color: var(--color-text-error);
+	border-color: var(--color-text-error);
 }
 
 @media (width <= 768px) {
