feat(frontend): extend route details page with edit feature ss-398 (#445)
* feat(frontend): extend route details page with edit controls ss-398

* feat(frontend): extend routes api with patch method ss-398

* feat(frontend): extend route details page with edit submit handler  ss-398

* feat(frontend): extend route details page with permissions logic  ss-398

* refactor(frontend): remove redundant jsx condition ss-398

* refactor(frontend): move useform defaults to constant & update names ss-398

* refactor(frontend): remove reduntant code ss-398

* refactor(frontend): add types ss-398

--- a/apps/frontend/src/pages/route-description/styles.module.css
+++ b/apps/frontend/src/pages/route-description/styles.module.css
@@ -23,6 +23,7 @@
 }
 
 .label {
+	margin: 0;
 	font-size: var(--font-size-h1);
 	font-weight: var(--font-weight-semibold);
 	line-height: 1.2;
@@ -31,4 +32,23 @@
 .description {
 	margin: 0;
 	overflow-wrap: break-word;
+}
+
+.header-container {
+	display: flex;
+	column-gap: 16px;
+	align-items: flex-end;
+	justify-content: space-between;
+}
+
+.edit-button-container {
+	width: 100%;
+	max-width: 100px;
+}
+
+.edit-mode-controls {
+	display: flex;
+	gap: 8px;
+	width: 100%;
+	max-width: 200px;
 }
