feat(frontend/shared): update profile page design ss-448

--- a/apps/frontend/src/libs/components/avatar/styles.module.css
+++ b/apps/frontend/src/libs/components/avatar/styles.module.css
@@ -21,9 +21,16 @@
 	justify-content: center;
 	width: 100%;
 	height: 100%;
-	font-size: var(--font-size-tiny);
-	font-weight: var(--font-weight-semibold);
-	color: var(--color-text-strong);
 	background-color: var(--color-brand-800);
 	border-radius: 50%;
+}
+
+.fallback-primary {
+	font-weight: var(--font-weight-semibold);
+	color: var(--color-text-strong);
+}
+
+.fallback-secondary {
+	font-size: calc(var(--font-size-large));
+	color: var(--color-base);
 }
