--- a/apps/frontend/src/libs/components/button/styles.module.css
+++ b/apps/frontend/src/libs/components/button/styles.module.css
@@ -70,6 +70,7 @@
 
 .outlined-danger {
 	color: var(--color-text-error);
+	background: var(--color-background-base);
 	border-color: var(--color-text-error);
 }
 
