--- a/apps/frontend/src/libs/components/input/styles.module.css
+++ b/apps/frontend/src/libs/components/input/styles.module.css
@@ -106,3 +106,10 @@
 		font-size: var(--font-size-tiny);
 	}
 }
+
+.input[readonly] {
+	color: var(--color-text-weak);
+	cursor: default;
+	background-color: var(--color-fill-grey);
+	border: 1px solid var(--color-stroke-weak);
+}
