feat(frontend): update select props and styles ss-340

--- a/apps/frontend/src/libs/components/select/styles.module.css
+++ b/apps/frontend/src/libs/components/select/styles.module.css
@@ -37,6 +37,11 @@
 	box-shadow: 0 2px 8px var(--color-shadow-strong);
 }
 
+.loading-message,
+.no-options-message {
+	padding: 8px 12px;
+}
+
 .option {
 	padding: 8px 12px;
 	cursor: pointer;
