--- a/apps/frontend/src/libs/components/button/styles.module.css
+++ b/apps/frontend/src/libs/components/button/styles.module.css
@@ -41,6 +41,18 @@
 		0 2px 4px -2px var(--color-shadow-strong);
 }
 
+.button-secondary {
+	color: var(--color-text-weak);
+	background-color: var(--color-brand-200);
+	border: none;
+}
+
+.button-secondary:hover {
+	color: var(--color-text-inverse-strong);
+	background-color: var(--color-brand-800);
+	box-shadow: none;
+}
+
 .button-primary:disabled {
 	background-color: var(--color-fill-press);
 	box-shadow: none;
