feat(backend/frontend/shared): implement admin dashboard issue ss-189 (#465)
* feat(frontend): implement table and adminDashboard with mock data ss-189

* feat(backend/frontend/shared): wip before cherry-pick ss-189

* feat(backend/frontend/shared): implement admin dashboard issue ss-189

* chore(root): sync dependencies lockfile ss-189

* style(shared): apply eslint/prettier fixes ss-189

* refactor(backend/frontend): apply changes from review comments ss-189

* refactor(backend/frontend/shared): refactor task according to the review ss-189

* refactor(shared): change field in schema ss-189

* feat(frontend): add main wrapper for manageRoutes ss-189

* refactor(frontend): remove useEffect in pagination hook  ss-189

* feat(frontend): add styles for main ss-189

* refactor(frontend): convert function components to arrow functions in table components ss-189

* refactor(frontend): move title from table to manage-routes ss-189

* refactor(frontend): move title from table to manage-routes ss-189

* refactor(frontend): remove title ss-189

* refactor(frontend): navigation component ss-189

* refactor(frontend): moved title from Table component to PointsOfInterestTable ss-189

* refactor(frontend): replace createColumns helper with useColumn hook in PointsOfInterestTable ss-189

* refactor(shared): rename POIs files and consts ss-189

* refactor(frontend): simplified NumberInput component ss-189

* refactor(frontend): add query parameter support to BaseHTTPApi ss-189

* fix(backend/shared): simplyfied schemas, controller, repository ss-189

* fix(frontend): enhance table and pagination styles for improved layout and usability ss-189

* feat(backend): add swagger documentation ss-189

* fix(backend): remove summary methods entity service and added tests ss-189

* feat(frontend): add manage routes icon to sidebar ss-189

* refactor(backend): pagination hook ss-189

* fix(backend): remove unusal types in entity service ss-189

* refactor(backend/frontend): rename folder and 

--- a/apps/frontend/src/pages/manage-routes/libs/components/points-of-interest-table/styles.module.css
+++ b/apps/frontend/src/pages/manage-routes/libs/components/points-of-interest-table/styles.module.css
@@ -6,7 +6,7 @@
 
 .title {
 	flex-shrink: 0;
-	margin: 0;
+	margin: 0 0 24px;
 	font-size: var(--font-size-h2);
 	line-height: 1.25;
 	color: var(--color-text-strong);
