--- a/apps/frontend/src/libs/components/feature-gallery/styles.module.css
+++ b/apps/frontend/src/libs/components/feature-gallery/styles.module.css
@@ -4,42 +4,54 @@
 
 .container {
 	display: grid;
-	grid-template-rows: repeat(2, 200px);
-	grid-auto-columns: calc((100% - (2 * var(--container-gap))) / 3);
-	grid-auto-flow: column;
+	grid-template-columns: 2fr 1fr;
+	gap: 16px;
+	width: 100%;
+	height: 416px;
+}
 
-	--container-gap: 16px;
+.left {
+	width: 100%;
+	height: 100%;
+}
 
-	gap: var(--container-gap);
+.right {
+	display: grid;
+	grid-template-rows: 1fr 1fr;
+	gap: 16px;
+	width: 100%;
+	height: 100%;
+	padding-right: 10px;
 	overflow: auto;
 }
 
 .image {
-	display: block;
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
 	border-radius: 8px;
 }
 
-.image:first-child {
-	grid-row: 1 / span 2;
-	grid-column: 1 / span 2;
+.component {
+	width: 100%;
+	height: 100%;
+	border-radius: 8px;
 }
 
 @media (width <= 991px) {
 	.container {
 		display: flex;
+		flex-direction: column;
+	}
+
+	.right {
+		display: flex;
+		padding-bottom: 10px;
 	}
 
 	.image {
 		width: 100%;
 		max-width: 300px;
 		height: auto;
-	}
-
-	.image:first-child {
-		grid-row: auto;
-		grid-column: auto;
 	}
 }
