--- a/apps/frontend/src/pages/points-of-interest-details/styles.module.css
+++ b/apps/frontend/src/pages/points-of-interest-details/styles.module.css
@@ -22,16 +22,35 @@
 	overflow-wrap: break-word;
 }
 
-@media (width <= 1440px) {
+@media (width <=1440px) {
 	.poi-container {
 		max-width: 1000px;
 		padding: 48px 80px;
 	}
 }
 
-@media (width <= 768px) {
+@media (width <=768px) {
 	.poi-container {
 		max-width: none;
 		padding: 32px 40px;
 	}
+}
+
+.header-container {
+	display: flex;
+	column-gap: 16px;
+	align-items: flex-end;
+	justify-content: space-between;
+}
+
+.edit-button-container {
+	width: 100%;
+	max-width: 100px;
+}
+
+.edit-mode-controls {
+	display: flex;
+	gap: 8px;
+	width: 100%;
+	max-width: 200px;
 }
