--- a/apps/frontend/src/pages/points-of-interest-details/styles.module.css
+++ b/apps/frontend/src/pages/points-of-interest-details/styles.module.css
@@ -8,17 +8,15 @@
 	margin: 0 auto;
 }
 
-.header {
+.label {
 	margin: 0;
 	font-size: var(--font-size-h1);
 	font-weight: var(--font-weight-semibold);
-	line-height: 1.4;
-	color: var(--color-text-strong);
+	line-height: 1.2;
 }
 
 .description {
-	font-size: var(--font-size-small);
-	line-height: 1.5;
+	margin: 0;
 	overflow-wrap: break-word;
 }
 
