--- a/apps/frontend/src/libs/components/image-gallery/styles.module.css
+++ b/apps/frontend/src/libs/components/image-gallery/styles.module.css
@@ -2,6 +2,17 @@
 	overflow: hidden;
 }
 
+.delete-button {
+	position: relative;
+	bottom: 48px;
+	z-index: 2;
+	opacity: 0.8;
+}
+
+.delete-button:hover {
+	opacity: 1;
+}
+
 .container {
 	display: grid;
 	grid-template-rows: repeat(2, 200px);
