--- a/apps/frontend/src/assets/css/variables.css
+++ b/apps/frontend/src/assets/css/variables.css
@@ -28,6 +28,7 @@
 	--color-shadow-weak: hsl(0deg 0% 0% / 3.9%);
 	--color-shadow-strong: hsl(0deg 0% 0% / 7.8%);
 	--color-base-overlay: hsl(0deg 0% 0% / 80%);
+	--color-route-line: hsl(129deg 71% 63% / 100%);
 	--font-family: "Inter", sans-serif;
 	--font-size-display: 3.5rem;
 	--font-size-h1: 2.5rem;
