fix(frontend): delete button too wide on a mobile screen ss-476

--- a/apps/frontend/src/libs/components/feature-gallery/styles.module.css
+++ b/apps/frontend/src/libs/components/feature-gallery/styles.module.css
@@ -60,6 +60,10 @@
 		flex-direction: column;
 	}
 
+	.delete-button {
+		max-width: 300px;
+	}
+
 	.right {
 		display: flex;
 		padding-bottom: 10px;
