--- a/apps/frontend/src/libs/components/header/libs/components/authenticated-header/libs/components/popover/styles.module.css
+++ b/apps/frontend/src/libs/components/header/libs/components/authenticated-header/libs/components/popover/styles.module.css
@@ -51,8 +51,15 @@
 }
 
 .empty {
-	margin: 50px auto;
+	margin: 50px 0;
 	font-weight: var(--font-weight-medium);
 	color: var(--color-text-strong);
 	text-align: center;
+}
+
+@media (width <= 768px) {
+	.content {
+		left: 0;
+		min-width: 210px;
+	}
 }
