refactor(frontend): update popover empty list ss-438

--- a/apps/frontend/src/libs/components/header/libs/components/authenticated-header/libs/components/popover/styles.module.css
+++ b/apps/frontend/src/libs/components/header/libs/components/authenticated-header/libs/components/popover/styles.module.css
@@ -51,7 +51,7 @@
 }
 
 .empty {
-	margin: 50px 0;
+	margin: 50px 10px;
 	font-weight: var(--font-weight-medium);
 	color: var(--color-text-strong);
 	text-align: center;
