--- a/apps/frontend/src/libs/components/select/styles.module.css
+++ b/apps/frontend/src/libs/components/select/styles.module.css
@@ -30,6 +30,16 @@
 	border: 1px solid var(--color-stroke-focus);
 }
 
+.control-icon-left {
+	flex-direction: row-reverse;
+	gap: 12px;
+}
+
+.loading-indicator-icon-left {
+	position: absolute;
+	right: 16px;
+}
+
 .menu {
 	z-index: 3;
 	background-color: var(--color-base);
