--- a/apps/frontend/src/libs/components/header/libs/components/authenticated-header/libs/components/notifications-popover/styles.module.css
+++ b/apps/frontend/src/libs/components/header/libs/components/authenticated-header/libs/components/notifications-popover/styles.module.css
@@ -27,7 +27,7 @@
 	right: 0;
 	z-index: 10;
 	min-width: 380px;
-	background: white;
+	background-color: var(--color-background-base);
 	border: 1px solid var(--color-fill-grey);
 	border-radius: 8px;
 }
@@ -51,7 +51,7 @@
 }
 
 .empty {
-	margin: 50px 10px;
+	margin: 48px 8px;
 	font-weight: var(--font-weight-medium);
 	color: var(--color-text-strong);
 	text-align: center;
