--- a/apps/frontend/src/pages/user-route/styles.module.css
+++ b/apps/frontend/src/pages/user-route/styles.module.css
@@ -1,12 +1,14 @@
 .container {
-	display: flex;
+	position: relative;
 	flex: 1;
-	justify-content: center;
 }
 
 .button-container {
-	align-self: flex-end;
-	width: 4rem;
-	height: 1rem;
-	margin-bottom: 5rem;
+	position: absolute;
+	bottom: 2rem;
+	left: 50%;
+	z-index: 1000;
+	display: flex;
+	gap: 1rem;
+	transform: translateX(-50%);
 }
