--- a/apps/frontend/src/libs/components/button/styles.module.css
+++ b/apps/frontend/src/libs/components/button/styles.module.css
@@ -1,7 +1,7 @@
 .button {
 	position: relative;
 	width: 100%;
-	min-width: fit-content;
+	min-width: 120px;
 	padding: 12px 16px;
 	font-family: var(--font-family);
 	font-size: var(--font-size-small);
@@ -36,9 +36,7 @@
 	color: var(--color-text-inverse-strong);
 	background-color: var(--color-fill-brand-strong);
 	border: none;
-	box-shadow:
-		0 4px 8px -2px var(--color-shadow-weak),
-		0 2px 4px -2px var(--color-shadow-strong);
+	box-shadow: var(--shadow-raised);
 }
 
 .button-primary:disabled {
