--- a/apps/frontend/src/libs/components/feature-gallery/styles.module.css
+++ b/apps/frontend/src/libs/components/feature-gallery/styles.module.css
@@ -7,7 +7,6 @@
 	grid-template-columns: 2fr 1fr;
 	gap: 16px;
 	width: 100%;
-	height: 416px;
 }
 
 .left {
@@ -21,11 +20,11 @@
 	gap: 16px;
 	width: 100%;
 	height: 100%;
-	padding-right: 10px;
 	overflow: auto;
 }
 
 .image {
+	display: block;
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
@@ -38,7 +37,7 @@
 	border-radius: 8px;
 }
 
-@media (width <= 991px) {
+@media (width <=991px) {
 	.container {
 		display: flex;
 		flex-direction: column;
@@ -46,12 +45,16 @@
 
 	.right {
 		display: flex;
-		padding-bottom: 10px;
 	}
 
 	.image {
 		width: 100%;
 		max-width: 300px;
 		height: auto;
+	}
+
+	.left .image {
+		max-width: 100%;
+		max-height: 300px;
 	}
 }
