--- a/apps/frontend/src/libs/components/input/styles.module.css
+++ b/apps/frontend/src/libs/components/input/styles.module.css
@@ -11,7 +11,7 @@
 	align-items: center;
 	font-size: var(--font-size-tiny);
 	font-weight: var(--font-weight-semibold);
-	line-height: 1.4;
+	line-height: 1;
 	color: var(--color-text-error);
 }
 
@@ -34,75 +34,51 @@
 	font-size: var(--font-size-small);
 	line-height: 1.5;
 	background-color: var(--color-background-base);
+	border: 1px solid var(--color-stroke-strong);
 	border-radius: 8px;
-	transition: background-color 0.2s ease-in-out;
+	transition:
+		background-color 0.2s ease-in-out,
+		outline 0.1s ease;
+}
+
+.input:focus-visible {
+	outline: 2px solid var(--color-stroke-focus);
+	outline-offset: 2px;
+	background-color: initial;
+}
+
+.input-container:not(:has(.icon-right:hover)) .input:hover {
+	background-color: var(--color-fill-hover);
 }
 
 .input-right-icon-space {
 	padding-right: 50px;
 }
 
-.input,
-.input:focus {
-	border: 1px solid var(--color-stroke-strong);
-}
-
-.input:hover {
-	background-color: var(--color-fill-hover);
-}
-
-.input.input-error {
+.input-error {
 	outline: none;
-	border: 2px solid var(--color-stroke-error-strong);
+	border: 1px solid var(--color-stroke-error);
 }
 
-.input-error,
-.input-error:hover,
 .input-error:focus {
+	outline: 2px solid var(--color-stroke-error);
+}
+
+.input-container:not(:has(.icon-right:hover)) .input-error:hover {
 	background-color: var(--color-fill-error-weak);
-}
-
-.input:focus {
-	outline: 2px solid var(--color-stroke-focus);
-	outline-offset: 2px;
-	background-color: initial;
-}
-
-.input:focus::placeholder {
-	color: transparent;
-}
-
-.input:focus + .error {
-	display: none;
 }
 
 .icon-right {
 	position: absolute;
 	top: 50%;
-	right: 2px;
+	right: 0;
 	display: flex;
-	align-items: center;
-	justify-content: center;
-	padding: 0 12px;
-	background-color: transparent;
-	border-radius: 8px;
+	height: 100%;
+	padding: 8px;
+	color: var(--color-icon-neutral);
 	transform: translateY(-50%);
 }
 
-.input:placeholder-shown {
-	padding-right: 16px;
-}
-
-.input:placeholder-shown ~ .icon-right {
-	display: none;
-}
-
-@media (width <= 768px) {
-	.input {
-		padding: 8px 12px;
-	}
-
-	.label-caption {
-		font-size: var(--font-size-tiny);
-	}
+.icon-right-error {
+	color: var(--color-icon-error);
 }
