--- a/apps/frontend/src/libs/components/map-location-field/styles.module.css
+++ b/apps/frontend/src/libs/components/map-location-field/styles.module.css
@@ -13,12 +13,12 @@
 }
 
 .map-section {
-	height: 420px;
+	height: 384px;
 	overflow: hidden;
 	border-radius: 8px;
 }
 
 .map-section-error {
 	background-color: var(--color-fill-error-weak);
-	border: 2px solid var(--color-stroke-error-strong);
+	border: 1px solid var(--color-stroke-error);
 }
