--- a/apps/frontend/src/libs/components/table/libs/components/table-head/styles.module.css
+++ b/apps/frontend/src/libs/components/table/libs/components/table-head/styles.module.css
@@ -1,13 +1,13 @@
-.thead {
+.head {
 	position: sticky;
 	top: 0;
-	z-index: 10;
+	z-index: 1;
 	width: 100%;
 	background: var(--color-base);
-	border-right: 2px solid var(--color-stroke-weak);
+	box-shadow: 0 1px 0 var(--color-stroke-weak);
 }
 
-.th {
+.cell {
 	padding: 12px 24px;
 	overflow: hidden;
 	text-overflow: ellipsis;
