--- a/apps/frontend/src/libs/components/table/libs/components/table-skeleton/styles.module.css
+++ b/apps/frontend/src/libs/components/table/libs/components/table-skeleton/styles.module.css
@@ -42,26 +42,26 @@
 	width: 85%;
 }
 
-.th,
-.td {
+.header-cell,
+.cell {
 	padding: 12px 24px;
 	font-size: var(--font-size-small);
 	line-height: 1.5;
 	border-bottom: 2px solid var(--color-stroke-weak);
 }
 
-.th {
+.header-cell {
 	font-weight: var(--font-weight-semibold);
 	color: var(--color-text-weak);
 	outline: none;
 	background: var(--color-fill-weak);
 }
 
-.td {
+.cell {
 	font-weight: var(--font-weight-regular);
 	color: var(--color-text-strong);
 }
 
-.tbody .tr:last-child .td {
+.tbody .row:last-child .cell {
 	border-bottom: none;
 }
