--- a/apps/frontend/src/pages/explore/libs/components/routes-panel/styles.module.css
+++ b/apps/frontend/src/pages/explore/libs/components/routes-panel/styles.module.css
@@ -2,11 +2,14 @@
 	display: flex;
 	flex-direction: column;
 	gap: 24px;
+	width: 464px;
 	height: 100%;
 	padding: 24px 32px;
+	overflow-y: scroll;
+	scrollbar-width: none;
+	scroll-behavior: smooth;
 	background-color: var(--color-base);
-	border: 1px solid var(--color-stroke-weak);
-	border-radius: 16px;
+	border-radius: 8px;
 }
 
 .title {
@@ -23,7 +26,17 @@
 	gap: 24px;
 	padding: 0;
 	margin: 0;
-	overflow-y: scroll;
-	scrollbar-width: none;
-	scroll-behavior: smooth;
+}
+
+.warning {
+	display: flex;
+	flex-direction: column;
+}
+
+.loader-container {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100%;
+	margin-bottom: 120px;
 }
