--- a/apps/frontend/src/pages/manage-routes/libs/components/points-of-interest-table/styles.module.css
+++ b/apps/frontend/src/pages/manage-routes/libs/components/points-of-interest-table/styles.module.css
@@ -1,7 +1,6 @@
 .container {
 	display: flex;
 	flex-direction: column;
-	height: 575px;
 }
 
 .title {
@@ -17,4 +16,8 @@
 	align-items: center;
 	justify-content: space-between;
 	margin: 0 0 24px;
+}
+
+.table-container {
+	height: 675px;
 }
