--- a/apps/frontend/src/pages/user-route/styles.module.css
+++ b/apps/frontend/src/pages/user-route/styles.module.css
@@ -12,3 +12,10 @@
 	gap: 1rem;
 	transform: translateX(-50%);
 }
+
+.loader-container {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
