feat(frontend): add tabs navigation for mobile ss-1

--- a/apps/frontend/src/assets/css/variables.css
+++ b/apps/frontend/src/assets/css/variables.css
@@ -44,5 +44,6 @@
 	--font-weight-bold: 700;
 	--width-sidebar-collapsed: 74px;
 	--width-sidebar-expanded: 320px;
+	--tabs-navigation-height: 56px;
 	--landing-container-width: 1264px;
 }
