--- a/apps/frontend/src/libs/components/text-link/styles.module.css
+++ b/apps/frontend/src/libs/components/text-link/styles.module.css
@@ -1,6 +1,6 @@
 .link {
 	color: var(--color-text-brand);
-	text-decoration: none;
+	text-decoration: underline solid;
 	transition: all 0.2s ease;
 }
 
