--- a/apps/frontend/src/pages/manage-routes/libs/components/points-of-interest-table/styles.module.css
+++ b/apps/frontend/src/pages/manage-routes/libs/components/points-of-interest-table/styles.module.css
@@ -5,7 +5,7 @@
 
 .title {
 	flex-shrink: 0;
-	margin: 0 0 24px;
+	margin: 0;
 	font-size: var(--font-size-h2);
 	line-height: 1.25;
 	color: var(--color-text-strong);
@@ -13,6 +13,8 @@
 
 .header {
 	display: flex;
+	flex-wrap: wrap;
+	gap: 8px;
 	align-items: center;
 	justify-content: space-between;
 	margin: 0 0 24px;
