--- a/apps/frontend/src/libs/components/sidebar/styles.module.css
+++ b/apps/frontend/src/libs/components/sidebar/styles.module.css
@@ -43,6 +43,7 @@
 	align-items: center;
 	width: 100%;
 	padding: 20px 24px;
+	margin-bottom: 56px;
 }
 
 .close-button {
@@ -114,7 +115,6 @@
 	gap: 48px;
 	max-width: 320px;
 	height: 100%;
-	padding-top: 56px;
 }
 
 .group {
@@ -171,4 +171,43 @@
 	border: 0;
 	clip: rect(0 0 0 0);
 	clip-path: inset(100%);
+}
+
+@media (width <=480px) {
+	.container {
+		top: auto;
+		width: 100%;
+		height: auto;
+	}
+
+	.header {
+		display: none;
+	}
+
+	.sidebar {
+		display: grid;
+		grid-auto-columns: minmax(100px, 1fr);
+		grid-auto-flow: column;
+		gap: 0;
+		max-width: 100%;
+		overflow-x: auto;
+		border-top: 1px solid var(--color-stroke-weak);
+	}
+
+	.group,
+	.navigation-list {
+		display: contents;
+	}
+
+	.title {
+		display: none;
+	}
+
+	.drawer {
+		width: 100%;
+	}
+
+	.group:not(:last-child)::after {
+		display: none;
+	}
 }
