--- a/apps/frontend/src/libs/components/table/libs/components/table-skeleton/styles.module.css
+++ b/apps/frontend/src/libs/components/table/libs/components/table-skeleton/styles.module.css
@@ -21,13 +21,13 @@
 
 .skeleton-header .skeleton-line {
 	width: 80%;
-	height: 18px;
+	height: 24px;
 	background-color: var(--color-fill-grey);
 }
 
 .skeleton-cell .skeleton-line {
 	width: 100%;
-	height: 34px;
+	height: 32px;
 }
 
 .skeleton-cell:nth-child(1) .skeleton-line {
@@ -47,7 +47,7 @@
 	padding: 12px 24px;
 	font-size: var(--font-size-small);
 	line-height: 1.5;
-	border-bottom: 2px solid var(--color-stroke-weak);
+	border-bottom: 1px solid var(--color-stroke-weak);
 }
 
 .header-cell {
@@ -62,6 +62,6 @@
 	color: var(--color-text-strong);
 }
 
-.tbody .row:last-child .cell {
+.row:last-child .cell {
 	border-bottom: none;
 }
