--- a/apps/frontend/src/pages/landing/libs/components/hero-section/styles.module.css
+++ b/apps/frontend/src/pages/landing/libs/components/hero-section/styles.module.css
@@ -32,6 +32,7 @@
 
 .cover {
 	width: 100%;
+	max-height: 500px;
 	aspect-ratio: 320 / 119;
 	background-image: url("../../../../../assets/images/landing-cover.jpg");
 	background-repeat: no-repeat;
