--- a/apps/frontend/src/pages/route-details/styles.module.css
+++ b/apps/frontend/src/pages/route-details/styles.module.css
@@ -2,6 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	gap: 32px;
+	width: 100%;
 	max-width: 1200px;
 	padding: 120px 48px;
 	margin: 0 auto;
@@ -24,6 +25,13 @@
 	column-gap: 16px;
 	align-items: flex-end;
 	justify-content: space-between;
+}
+
+.loader-container {
+	display: flex;
+	flex: 1;
+	align-items: center;
+	justify-content: center;
 }
 
 .edit-mode-controls {
