--- a/apps/frontend/src/libs/components/feature-gallery/styles.module.css
+++ b/apps/frontend/src/libs/components/feature-gallery/styles.module.css
@@ -2,13 +2,21 @@
 	overflow: hidden;
 }
 
-.delete-button {
-	position: relative;
-	top: -60px;
+.delete-icon {
+	position: absolute;
+	top: 8px;
+	right: 8px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 40px;
+	height: 40px;
+	background-color: var(--color-base);
+	border-radius: 8px;
 	opacity: 0.7;
 }
 
-.delete-button:hover {
+.delete-icon:hover {
 	opacity: 1;
 }
 
