feat(frontend): add construct route page ss-340 (#436)
* feat(frontend): add poi api with getAll method ss-340

* feat(frontend): add poi module, add poi reducer to store ss-340

* feat(frontend): add new icons ss-340

* feat(frontend): add construct page component ss-340

* feat(frontend): add construct route method and async thunk ss-340

* refactor(frontend): update styles, change marker type ss-340

* feat(frontend): update select logic, add construct handler ss-340

* feat(frontend): add success toast on route construct ss-340

* refactor(frontend): move SelectOption to common types ss-340

* refactor(frontend): update icon styles ss-340

* feat(frontend): update construct route page styles ss-340

* feat(frontend): add isLoading, onChange and onInputChange props ss-340

* feat(frontend): replace AsyncSelect with Select component ss-340

* feat(frontend): add useDebounce hook ss-340

* feat(frontend): optimize logic, add debounce on search, add loading flag ss-340

* refactor(frontend): decompose construct-route, move side panel to separate component ss-340

* refactor(frontend): refine onChange prop definition ss-340

* refactor(frontend): create separate redux slice and actions for construct route ss-340

* refactor(frontend): move poi detail path out of render, fix wrong class name ss-340

* refactor(shared/backend): move PlannedPathResponseDto to shared ss-340

* refactor(frontend): replace RouteConstructResponseDto with PlannedPathResponseDto ss-340

* feat(frontend): install debounce, redo useDebounce and its usage ss-340

* feat(frontend): update handleSelectInputChange ss-340

* feat(frontend): add route line rendering feature ss-340

* feat(frontend): add search icon ss-340

* feat(frontend): update select props and styles ss-340

* feat(frontend): update select styles in side-panel, replace drop down indicator with icon ss-340

* fix(frontend): apply higher z-index to side panel ss-340

* fix(frontend): update naming ss-340

* feat(frontend): add getC

--- a/apps/frontend/src/libs/components/select/styles.module.css
+++ b/apps/frontend/src/libs/components/select/styles.module.css
@@ -30,11 +30,26 @@
 	border: 1px solid var(--color-stroke-focus);
 }
 
+.control-icon-left {
+	flex-direction: row-reverse;
+	gap: 12px;
+}
+
+.loading-indicator-icon-left {
+	position: absolute;
+	right: 16px;
+}
+
 .menu {
 	z-index: 3;
 	background-color: var(--color-base);
 	border-radius: 8px;
 	box-shadow: 0 2px 8px var(--color-shadow-strong);
+}
+
+.loading-message,
+.no-options-message {
+	padding: 8px 12px;
 }
 
 .option {
