feat(frontend/backend/shared): add user profile page and follow feature ss-402 (#457)
* feat(frontend/backend/shared): add user profile page and follow feature ss-402

* fix(frontend/backend/shared): removed unnecessary current user id from get profile ss-402

* style(frontend): remove unnecessary flex direction ss-402

* fix(frontend): using redux thunk for data ss-402

* refactor(frontend): using space from html symbols ss-402

* refactor(backend): change sring path to enum path ss-402

* refactor(backend): renamed finduserprofile to getuserprofile ss-402

* refactor(backend): userprofileresponce using pick ss-402

* feat(backend/shared): id check and covert to number in validation schema ss-402

* refactor(backend): get profile query diveded on separated parts ss-402

* style(frontend): unnecessary flexdirection remove ss-402

* fix(backend/frontend): change userfollow retuning null in response to bool ss-402

* test(backend): add test for getuserprofile ss-402

* feat(backend): add avatar to profile ss-402

* feat(backend/shared/frontend): userprofile path name renamed ss-402

* feat(frontend): different style for unfollow button ss-402

* refactor(frontend): changed avatardata type to pick userauthresponsedto ss-402

* refactor(backend): check user profile move to user service ss-402

* feat(frontend): add toast messages on follow and unfollow events ss-402

* fix(frontend): profile route using from to enum  ss-402

* refactor(backend/shared): rename exception message ss-402

* style(frontend): removed unnecessary style ss-402

* style(frontend): making gap and padding bigger ss-402

* style(frontend): changed height from 100vh to 100% ss-402

* refactor(frontend): renamed and removed variables in public profile ss-402

* fix(frontend): removed unnecesary acivities block ss-402

* refactor(frontend): refactor follow and data fetch logic ss-402

* refactor(backend): refactor getprofile logic ss-402

* style(frontend): using h1 insteadof div ss-402

* refactor(fr

--- a/apps/frontend/src/libs/components/button/styles.module.css
+++ b/apps/frontend/src/libs/components/button/styles.module.css
@@ -39,6 +39,18 @@
 	box-shadow: var(--shadow-raised);
 }
 
+.button-secondary {
+	color: var(--color-text-weak);
+	background-color: var(--color-brand-200);
+	border: none;
+}
+
+.button-secondary:hover {
+	color: var(--color-text-inverse-strong);
+	background-color: var(--color-brand-800);
+	box-shadow: none;
+}
+
 .button-primary:disabled {
 	background-color: var(--color-fill-press);
 	box-shadow: none;
