--- a/apps/frontend/src/libs/components/feature-gallery/styles.module.css
+++ b/apps/frontend/src/libs/components/feature-gallery/styles.module.css
@@ -20,7 +20,7 @@
 	opacity: 1;
 }
 
-.image-wrapper {
+.slide-wrapper {
 	position: relative;
 	width: 100%;
 	height: 100%;
@@ -37,6 +37,7 @@
 .left {
 	width: 100%;
 	height: 100%;
+	min-height: 300px;
 	max-height: 500px;
 }
 
