--- a/apps/frontend/src/libs/components/feature-gallery/styles.module.css
+++ b/apps/frontend/src/libs/components/feature-gallery/styles.module.css
@@ -2,7 +2,7 @@
 	overflow: hidden;
 }
 
-.delete-icon {
+.delete-icon-wrapper {
 	position: absolute;
 	top: 8px;
 	right: 8px;
@@ -11,6 +11,7 @@
 	justify-content: center;
 	width: 40px;
 	height: 40px;
+	cursor: pointer;
 	background-color: var(--color-base);
 	border-radius: 8px;
 	opacity: 0.7;
