--- a/apps/frontend/src/pages/explore/libs/components/routes-panel/styles.module.css
+++ b/apps/frontend/src/pages/explore/libs/components/routes-panel/styles.module.css
@@ -4,6 +4,7 @@
 	gap: 24px;
 	height: 100%;
 	padding: 24px 32px;
+	margin: 32px;
 	background-color: var(--color-base);
 	border: 1px solid var(--color-stroke-weak);
 	border-radius: 16px;
