refactor(frontend): update styles ss-542

--- a/apps/frontend/src/pages/construct-route/libs/components/side-panel/styles.module.css
+++ b/apps/frontend/src/pages/construct-route/libs/components/side-panel/styles.module.css
@@ -34,6 +34,7 @@
 
 .body {
 	display: flex;
+	flex: 1;
 	flex-direction: column;
 	gap: 16px;
 	overflow: hidden;
@@ -55,5 +56,6 @@
 }
 
 .footer {
+	align-self: flex-end;
 	margin-left: auto;
 }
