feat(frontend): integrate route creation with construct route flow ss-542 (#557)
* feat(frontend): integrate route creation with construct route flow ss-542

* refactor(frontend): update styles, naming ss-542

* refactor(frontend): update styles for build path btn ss-542

* feat(frontend): update route creation flow ss-542

* fix(frontend): update naming ss-542

* refactor(frontend): update styles ss-542

* refactor(frontend): replace manual query building with getUrlWithQueryString ss-542

--- a/apps/frontend/src/pages/construct-route/libs/components/side-panel/styles.module.css
+++ b/apps/frontend/src/pages/construct-route/libs/components/side-panel/styles.module.css
@@ -1,11 +1,10 @@
 .container {
 	position: absolute;
 	inset: 0;
-	z-index: 3;
+	z-index: 2;
 	width: max-content;
 	height: 100%;
 	padding: 32px;
-	padding-bottom: 64px;
 }
 
 .panel {
@@ -35,6 +34,7 @@
 
 .body {
 	display: flex;
+	flex: 1;
 	flex-direction: column;
 	gap: 16px;
 	overflow: hidden;
@@ -53,4 +53,9 @@
 	padding: 0;
 	margin: 0;
 	overflow-y: auto;
+}
+
+.footer {
+	align-self: flex-end;
+	margin-left: auto;
 }
