feat(frontend/shared): update profile page design ss-448 (#482)
* feat(frontend/shared): update profile page design ss-448

* refactor(frontend): made changes according to the review ss-448

* refactor(frontend/shared): change code according to the review ss-448

* refactor(frontend): change code according to the review ss-448

* refactor(frontend): keep only light theme for avatar ss-448

--- a/apps/frontend/src/libs/components/input/styles.module.css
+++ b/apps/frontend/src/libs/components/input/styles.module.css
@@ -82,3 +82,10 @@
 .icon-right-error {
 	color: var(--color-icon-error);
 }
+
+.input-readonly {
+	color: var(--color-text-weak);
+	cursor: default;
+	background-color: var(--color-fill-grey);
+	border: 1px solid var(--color-stroke-weak);
+}
