--- a/apps/frontend/src/libs/components/avatar/styles.module.css
+++ b/apps/frontend/src/libs/components/avatar/styles.module.css
@@ -5,6 +5,7 @@
 	width: var(--avatar-size);
 	height: var(--avatar-size);
 	overflow: hidden;
+	font-size: var(--font-size);
 	border-radius: 50%;
 }
 
@@ -21,9 +22,7 @@
 	justify-content: center;
 	width: 100%;
 	height: 100%;
-	font-size: var(--font-size-tiny);
-	font-weight: var(--font-weight-semibold);
-	color: var(--color-text-strong);
+	color: var(--color-base);
 	background-color: var(--color-brand-800);
 	border-radius: 50%;
 }
