--- a/apps/frontend/src/libs/components/checkbox/styles.module.css
+++ b/apps/frontend/src/libs/components/checkbox/styles.module.css
@@ -1,6 +1,24 @@
 .container {
 	display: flex;
-	column-gap: 20px;
+	column-gap: 16px;
+	align-items: center;
 	width: fit-content;
 	cursor: pointer;
+}
+
+.custom-checkbox {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 20px;
+	height: 20px;
+	background-color: var(--color-fill-grey);
+	border: 2px solid var(--color-stroke-weak);
+	border-radius: 4px;
+	transition: all 0.2s ease;
+}
+
+.input:checked + .custom-checkbox {
+	background-color: var(--color-fill-brand-strong);
+	border-color: var(--color-stroke-selected);
 }
