--- a/apps/frontend/src/pages/dashboard/libs/components/styles.module.css
+++ b/apps/frontend/src/pages/dashboard/libs/components/styles.module.css
@@ -3,18 +3,20 @@
 	text-align: start;
 }
 
-.route-container {
+.card {
 	position: relative;
 	width: 100%;
 	max-width: 500px;
 	min-height: 350px;
+	color: inherit;
+	text-decoration: none;
 	cursor: pointer;
 	outline: none;
 	background: none;
 	border: none;
 }
 
-.cards-container {
+.cards-wrapper {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	gap: 16px;
