--- a/apps/frontend/src/libs/components/route-card/styles.module.css
+++ b/apps/frontend/src/libs/components/route-card/styles.module.css
@@ -1,14 +1,37 @@
+.button {
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+	font: inherit;
+	color: inherit;
+	text-decoration: none;
+	appearance: none;
+	cursor: pointer;
+	outline: inherit;
+	background: none;
+	border: none;
+	border-radius: 8px;
+}
+
+.button:hover {
+	background-color: var(--color-fill-hover);
+	transform: translateY(-2px);
+}
+
+.button:focus {
+	outline: inherit;
+}
+
+.button:focus-visible {
+	outline: inherit;
+}
+
 .route-card {
 	display: flex;
 	flex-shrink: 0;
 	flex-direction: column;
 	width: 100%;
 	max-width: 400px;
-}
-
-.route-card:hover {
-	background-color: var(--color-fill-hover);
-	transform: translateY(-2px);
 }
 
 .image {
@@ -23,13 +46,15 @@
 .image,
 .image-placeholder {
 	height: 240px;
-	border-radius: 8px;
+	border-top-left-radius: 8px;
+	border-top-right-radius: 8px;
 }
 
 .data {
 	display: flex;
 	flex-direction: column;
 	gap: 8px;
+	padding: 8px;
 }
 
 .label {
